--- a/style.css
+++ b/style.css
@@ -1297,7 +1297,7 @@ h2::after {
 
 .contact-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column; /* Change to column direction */
   max-width: 1200px;
   margin: 0 auto;
   align-items: flex-start;
@@ -1305,7 +1305,7 @@ h2::after {
 }
 
 .contact-info {
-  flex: 1;
+  width: 100%; /* Take full width */
   display: flex;
   align-items: center;
 }
@@ -1313,7 +1313,8 @@ h2::after {
 .contact-info .logo {
   font-size: 2rem;
   font-weight: 700;
-  margin-right: 20px;
+  margin-right: 200px; /* Increase margin for more space */
+  padding: 8px 50px;
 }
 
 .contact-info .text-content {
@@ -1329,7 +1330,6 @@ h2::after {
 .contact-info .text-content h3 {
   font-size: 2rem;
   font-weight: 600;
-  margin-bottom: 20px;
 }
 
 .contact-info p {
@@ -1394,7 +1394,6 @@ h2::after {
 /* Responsive styles */
 @media (max-width: 768px) {
   .contact-container {
-    flex-direction: column;
     align-items: center;
   }
 
