--- a/style.css
+++ b/style.css
@@ -1373,8 +1373,8 @@ h2::after {
 }
 
 .contact-info .logo {
-  width: 180px;
-  height: 50px;
+  width: 220px;
+  height: 60px;
   text-align: center;
   font-size: 1rem;
   font-weight: 500;
@@ -1385,6 +1385,11 @@ h2::after {
   border-radius: 4px;
   /* box-shadow: 0 4px 15px rgba(0,0,0,0.1); */
   transition: all 1s ease;
+}
+.contact-info .logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .contact-info .logo:hover {
