--- a/style.css
+++ b/style.css
@@ -1469,6 +1469,30 @@ h2::after {
 }
 
 .contact-details {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.contact-address {
+  flex: 1;
+  font-size: 0.9rem;
+  line-height: 1.6;
+  color: #555;
+}
+
+.contact-address p {
+  margin-bottom: 20px;
+}
+
+.contact-address span {
+  font-weight: 700;
+  display: block;
+  margin-bottom: 5px;
+}
+
+.contact-details {
   margin-top: 50px;
   text-align: center;
 }
@@ -1498,5 +1522,18 @@ h2::after {
 
   .contact-info .text-content {
     text-align: center;
+  }
+
+  .contact-details {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-address, .contact-form {
+    width: 100%;
+  }
+
+  .contact-address {
+    margin-bottom: 20px;
   }
 }
