--- a/style.css
+++ b/style.css
@@ -1382,13 +1382,13 @@ h2::after {
 
 .contact-info .text-content {
   flex: 1;
+  margin-left: 8rem;
 }
 
 .contact-info .text-content h3 {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: 400;
-  color: #555;
-  margin-bottom: 15px;
+  color: #000;
   line-height: 1.5;
 }
 
