--- a/style.css
+++ b/style.css
@@ -42,11 +42,22 @@ ul {
 header {
   padding: 20px 0;
   background-color: #fff;
-  position: fixed;
   width: 100%;
   top: 0;
   z-index: 100;
   box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  transition: all 0.3s ease;
+}
+
+.static-header {
+  position: static;
+}
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 header .container {
